--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-leap-day
 title: Product Recommendation System
+include: https://github.com/Team-HSP/Recommendation-System-Hadoop/blob/master/Workflow.JPG
